--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,11 @@
 {
     "compilerOptions": {
         "outDir": "out",
-        "moduleResolution": "node",
-        "module": "ES2020",
-        "target": "es2020",
-        "strict": true,
-        "noImplicitAny": true,
-        "removeComments": true,
-        "preserveConstEnums": true,
-        "sourceMap": false,
-        "allowSyntheticDefaultImports": true
+        "module": "commonjs",
+        "target": "es2018",
+	"lib": ["es2018"],
+	"esModuleInterop": true
     },
-    "exclude": [
-		"node_modules",
-        "out",
-		"lib"
-	],
-	"include": [
-        "src/**/*"
-    ]
+    "exclude": [ "node_modules", "out" ],
+    "include": [ "src/**/*" ]
 }
