Changed to node 10.

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "^4.4.2"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "rpi-led-matrix": "^1.11.1"
   }
 }
