--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "tsc": "tsc",
-    "start": "node out/index.js"
+    "start": "node out/index.js",
+    "start-pi": "sudo ~/.nvm/versions/node/v10.24.1/bin/node out/index.js"
   },
   "repository": {
     "type": "git",
