--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   "homepage": "https://github.com/r0oto0r/f1shp1#readme",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^16.7.13",
     "typescript": "^4.4.2"
   },
   "dependencies": {
     "express": "^4.17.1",
+    "mongoose": "^5.13.7",
     "rpi-led-matrix": "^1.11.1"
   }
 }
