--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "typescript": "^4.4.2"
   },
   "dependencies": {
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.13.7",
