--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,11 @@
         "outDir": "out",
         "module": "commonjs",
         "target": "es2020",
-	"lib": ["es2020"],
-	"esModuleInterop": true
+	    "lib": ["es2020"],
+	    "esModuleInterop": true,
+        "strict": true,
+        "skipLibCheck": true,
+        "forceConsistentCasingInFileNames": true
     },
     "exclude": [ "node_modules", "out" ],
     "include": [ "src/**/*" ]
