--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^16.9.1",
+    "@types/socket.io": "^3.0.2",
     "typescript": "^4.4.3"
   },
   "dependencies": {
@@ -30,6 +31,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^6.0.5",
-    "rpi-led-matrix": "^1.11.1"
+    "rpi-led-matrix": "^1.11.1",
+    "socket.io": "^4.2.0"
   }
 }
